status effect bleed

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/Demo
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem2=/Game/Levels/texturedzoo
 MRUItem3=/Game/Levels/MechanicsLevel
 MRUItem4=/Game/Levels/MainMenu
@@ -180,8 +180,8 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 ArrayProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
@@ -205,7 +205,7 @@ PlayerController=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultVa
 Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 RangeFinder_C=
 Button=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -254,17 +254,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/EnemyAgent
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
-OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
-OpenAssetsAtExit=/Game/EnemyAgent/EnemyData.EnemyData
-OpenAssetsAtExit=/Game/EnemyAgent/EnemyStats.EnemyStats
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2668,13 +2664,17 @@ CorruptedSlave_C.MovementComponent=True
 CorruptedSlave_C.Shape=True
 CorruptedSlave_C.Navigation=True
 CorruptedSlave_C.Materials=True
+WidgetBlueprint.ClassOptions=True
+WidgetBlueprint.Interfaces=True
+WidgetBlueprint.BlueprintOptions=True
+WidgetBlueprint.Packaging=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
 /Game/AIAgent/TargetInterface.TargetInterface=0
 /Game/AIAgent/ProtoAI.ProtoAI=0
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
-/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
+/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=1
 /Game/Materials/BlueGreen.BlueGreen=0
 /Game/Materials/YellowGreen.YellowGreen=0
 /Game/Materials/YellowOrange.YellowOrange=0
@@ -2716,7 +2716,7 @@ CorruptedSlave_C.Materials=True
 /Game/AIAgent/I_Damage.I_Damage=0
 /Game/GW000979/BasicTeleporter/Teleport.Teleport=1
 /Game/Widgets/Ability_Wheel.Ability_Wheel=0
-/Game/Chloe/UI/HUD_Proto.HUD_Proto=0
+/Game/Chloe/UI/HUD_Proto.HUD_Proto=1
 /Game/Models/Shannon/body_WIP.body_WIP=0
 /Game/AIAgent/AIController_I.AIController_I=0
 /Game/AIAgent/RangedController.RangedController=0
@@ -2756,6 +2756,8 @@ CorruptedSlave_C.Materials=True
 /Game/c024816h/TopDownCharacter3.TopDownCharacter3=0
 /Game/Mannequin/Character/Materials/TempCharacterInst.TempCharacterInst=0
 /Game/EnemyAgent/EnemyStats.EnemyStats=0
+/Game/CombatInterface/I_Combat.I_Combat=1
+/Game/TopDownBP/Hud/I_HUD.I_HUD=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2771,12 +2773,12 @@ ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character=
-Pawn=
+Character="\"Object.PlayerHealth\" \"Object.PlayerHealth\" "
+Pawn="\"Object.PlayerHealth\" \"Object.PlayerHealth\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2790,7 +2792,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.Current Armour Helm Equipped\" \"Object.Current Armour Helm Equipped\" "
+TopDownCharacter_C="\"Object.PlayerHealth\" \"Object.PlayerHealth\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2823,8 +2825,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Character\" \"Object.Character\" "
+Visual="\"Object.Character\" \"Object.Character\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
@@ -2833,8 +2835,8 @@ ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Ob
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Ability_Wheel_C="\"Object.Player Ref\" \"Object.Player Ref\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Character\" \"Object.Character\" "
+HUD_Proto_C="\"Object.Character\" \"Object.Character\" "
 HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
 BehaviorTreeGraphNode=
@@ -2892,7 +2894,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3686,26 +3688,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/EnemyAgent/EnemyStats
-MRUItem1=/Game/EnemyAgent/EnemyData
-MRUItem2=/Game/EnemyAgent/CorruptedSlave
-MRUItem3=/Game/AIAgent/BaseAI
+MRUItem0=/Game/TopDownBP/Hud/I_HUD
+MRUItem1=/Game/Chloe/UI/HUD_Proto
+MRUItem2=/Game/Levels/Demo
+MRUItem3=/Game/CombatInterface/I_Combat
 MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem5=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem6=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem7=/Game/c024816h/TopDownCharacter3
-MRUItem8=/Game/c024816h/PickUpInterface
-MRUItem9=/Game/c024816h/BasePickUp
-MRUItem10=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem11=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem12=/Game/Levels/Demo
-MRUItem13=/Game/AIAgent/Baseprojectile
-MRUItem14=/Game/T019847G/DeathZone
-MRUItem15=/Game/TopDownBP/Interactexample/Door
-MRUItem16=/Game/GW000979/DataStruct/DataTables/TestItemTable
-MRUItem17=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem18=/Game/c024816h/Elixir
-MRUItem19=/Game/c024816h/VitalityPotion
+MRUItem5=/Game/EnemyAgent/EnemyStats
+MRUItem6=/Game/EnemyAgent/EnemyData
+MRUItem7=/Game/EnemyAgent/CorruptedSlave
+MRUItem8=/Game/AIAgent/BaseAI
+MRUItem9=/Game/GW000979/DataStruct/ArmourSlot
+MRUItem10=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem11=/Game/c024816h/TopDownCharacter3
+MRUItem12=/Game/c024816h/PickUpInterface
+MRUItem13=/Game/c024816h/BasePickUp
+MRUItem14=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem15=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem16=/Game/AIAgent/Baseprojectile
+MRUItem17=/Game/T019847G/DeathZone
+MRUItem18=/Game/TopDownBP/Interactexample/Door
+MRUItem19=/Game/GW000979/DataStruct/DataTables/TestItemTable
 
 [WidgetTemplatesExpanded]
 Extra=False
