Status can now be inflicted by Ai

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -263,7 +263,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
 OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
@@ -2756,6 +2755,7 @@ CorruptedSlave_C.Materials=True
 /Game/c024816h/TopDownCharacter3.TopDownCharacter3=0
 /Game/Mannequin/Character/Materials/TempCharacterInst.TempCharacterInst=0
 /Game/EnemyAgent/EnemyStats.EnemyStats=0
+/Game/CombatInterface/I_Combat.I_Combat=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2847,7 +2847,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C=
 RangedAI_C="\"Object.\" \"Object.\" "
-BaseAI_C="\"Object.Bleed?\" \"Object.Bleed?\" "
+BaseAI_C=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -2868,7 +2868,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" 
 REINST_TopDownCharacter_C_236="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
 CorruptedSlave_C=
 Inflict Status=
-Choose Status="\"Struct.RNG\" "
+Choose Status=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3689,25 +3689,25 @@ PreserveScaleRatio=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/AIAgent/BaseAI
-MRUItem1=/Game/EnemyAgent/CorruptedSlave
-MRUItem2=/Game/EnemyAgent/EnemyStats
-MRUItem3=/Game/EnemyAgent/EnemyData
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem5=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem6=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem7=/Game/c024816h/TopDownCharacter3
-MRUItem8=/Game/c024816h/PickUpInterface
-MRUItem9=/Game/c024816h/BasePickUp
-MRUItem10=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem11=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem12=/Game/Levels/Demo
-MRUItem13=/Game/AIAgent/Baseprojectile
-MRUItem14=/Game/T019847G/DeathZone
-MRUItem15=/Game/TopDownBP/Interactexample/Door
-MRUItem16=/Game/GW000979/DataStruct/DataTables/TestItemTable
-MRUItem17=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem18=/Game/c024816h/Elixir
-MRUItem19=/Game/c024816h/VitalityPotion
+MRUItem1=/Game/CombatInterface/I_Combat
+MRUItem2=/Game/EnemyAgent/CorruptedSlave
+MRUItem3=/Game/EnemyAgent/EnemyStats
+MRUItem4=/Game/EnemyAgent/EnemyData
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem6=/Game/GW000979/DataStruct/ArmourSlot
+MRUItem7=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem8=/Game/c024816h/TopDownCharacter3
+MRUItem9=/Game/c024816h/PickUpInterface
+MRUItem10=/Game/c024816h/BasePickUp
+MRUItem11=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem12=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem13=/Game/Levels/Demo
+MRUItem14=/Game/AIAgent/Baseprojectile
+MRUItem15=/Game/T019847G/DeathZone
+MRUItem16=/Game/TopDownBP/Interactexample/Door
+MRUItem17=/Game/GW000979/DataStruct/DataTables/TestItemTable
+MRUItem18=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem19=/Game/c024816h/Elixir
 
 [WidgetTemplatesExpanded]
 Extra=False
