--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -250,7 +250,8 @@ ContentBrowserTab1.SelectedPaths=/Game/David-o020107h/Audio
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com__Cue.Evil_1__online-audio-converter_com__Cue
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2512,6 +2513,8 @@ SoundCue.Concurrency=True
 SoundCue.Effects=True
 SoundCue.Info=True
 SoundNodeWavePlayer.WavePlayer=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2588,13 +2591,15 @@ SoundNodeWavePlayer.WavePlayer=True
 /Game/GW000979/DataStruct/WeaponInt.WeaponInt=0
 /Game/Chloe/UI/I_InventoryInterface.I_InventoryInterface=0
 /Game/David-o020107h/Audio/Egypt_intro_Cue.Egypt_intro_Cue=1
+/Game/David-o020107h/Audio/Death_atmospheric_1__1___online-audio-converter_com__Cue.Death_atmospheric_1__1___online-audio-converter_com__Cue=1
+/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com__Cue.Evil_1__online-audio-converter_com__Cue=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.AttenuationSettings.AttenuationOverrides.CustomLowpassAirAbsorptionCurve\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2722,7 +2727,7 @@ UNR=../../../../../../Users/c018840h/Documents/GitHub/SCollab-Proto/SP_Prototype
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
-GenericImport=../../../../../../Users/c018840h/Downloads/Egypt intro.wav
+GenericImport=F:/Group 17 work/Sounds/Evil 1/Evil 2/Evil 3/Evil 1 (online-audio-converter.com).wav
 GenericExport=C:/Users/Tony/Desktop/Level 6/Collab/SK_Mannequin_TD.FBX
 GenericOpen=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 GenericSave=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3512,26 +3517,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/David-o020107h/Audio/Egypt_intro_Cue
-MRUItem1=/Game/Levels/texturedzoo
-MRUItem2=/Game/Levels/assetlayout
-MRUItem3=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem4=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
-MRUItem7=/Game/GW000979/DataStruct/Structs/AccessoryStruct
-MRUItem8=/Game/GW000979/DataStruct/Structs/Armour_Struct
-MRUItem9=/Game/Chloe/UI/I_InventoryInterface
-MRUItem10=/Game/c024816h/PickUpInterface
-MRUItem11=/Game/GW000979/DataStruct/WeaponInt
-MRUItem12=/Game/GW000979/DataStruct/WeaponInt2
-MRUItem13=/Game/AIAgent/AIbot
-MRUItem14=/Game/AIAgent/BaseAI
-MRUItem15=/Game/GW000979/DataStruct/Inventory
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem17=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem18=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem19=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem0=/Game/David-o020107h/Audio/Creature_sound_Cue
+MRUItem1=/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com__Cue
+MRUItem2=/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com___1_
+MRUItem3=/Game/David-o020107h/Audio/Death_atmospheric_1__1___online-audio-converter_com__Cue
+MRUItem4=/Game/David-o020107h/Audio/Egypt_intro_Cue
+MRUItem5=/Game/Levels/texturedzoo
+MRUItem6=/Game/Levels/assetlayout
+MRUItem7=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem8=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem9=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem10=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
+MRUItem11=/Game/GW000979/DataStruct/Structs/AccessoryStruct
+MRUItem12=/Game/GW000979/DataStruct/Structs/Armour_Struct
+MRUItem13=/Game/Chloe/UI/I_InventoryInterface
+MRUItem14=/Game/c024816h/PickUpInterface
+MRUItem15=/Game/GW000979/DataStruct/WeaponInt
+MRUItem16=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem17=/Game/AIAgent/AIbot
+MRUItem18=/Game/AIAgent/BaseAI
+MRUItem19=/Game/GW000979/DataStruct/Inventory
 
 [WidgetTemplatesExpanded]
 Extra=False
